--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.0.82-beta'
+    testCompile 'org.mockito:mockito-core:2.8.9'
 }
 
 apply plugin: 'com.google.gms.google-services'
