--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 def keystorePropertiesFile = rootProject.file("upload_keystore.properties")
 def keystoreProperties = new Properties()
@@ -38,22 +39,27 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
     // Compile Time Dependencies
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:26.0.0'
-    compile 'com.android.support:design:26.0.0'
-    compile 'com.android.support:support-v4:26.0.0'
-    compile 'com.github.Berico-Technologies:Geo-Coordinate-Conversion-Java:360781e'
-    compile 'com.github.ronaldsmartin:Material-ViewPagerIndicator:1.0.2'
-    compile 'com.google.android.gms:play-services-location:11.0.4'
-    compile 'com.google.firebase:firebase-crash:11.0.4'
-    compile 'com.jakewharton:butterknife:8.4.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.android.support:design:26.0.0'
+    implementation 'com.android.support:support-v4:26.0.0'
+    implementation 'com.github.Berico-Technologies:Geo-Coordinate-Conversion-Java:360781e'
+    implementation 'com.github.ronaldsmartin:Material-ViewPagerIndicator:1.0.2'
+    implementation 'com.google.android.gms:play-services-location:11.0.4'
+    implementation 'com.google.firebase:firebase-crash:11.0.4'
+    implementation 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     // Unit Test Dependencies
-    testCompile('com.squareup.assertj:assertj-android:1.1.1') {
+    testImplementation('com.squareup.assertj:assertj-android:1.1.1') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.8.9'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.8.9'
 }
 
 apply plugin: 'com.google.gms.google-services'
+repositories {
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+}
