--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 def keystorePropertiesFile = rootProject.file("upload_keystore.properties")
 def keystoreProperties = new Properties()
@@ -35,9 +36,6 @@ android {
 }
 
 dependencies {
-    // Annotation Processors
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-
     // Compile Time Dependencies
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.0.0'
@@ -47,7 +45,6 @@ dependencies {
     implementation 'com.github.ronaldsmartin:Material-ViewPagerIndicator:1.0.2'
     implementation 'com.google.android.gms:play-services-location:11.0.4'
     implementation 'com.google.firebase:firebase-crash:11.0.4'
-    implementation 'com.jakewharton:kotterknife:0.1.0-SNAPSHOT'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     // Unit Test Dependencies
