--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,15 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+}
+
 dependencies {
-    def androidArchitectureComponentsVersion = "1.0.0-alpha9"
-    def androidSupportLibraryVersion = "26.0.2"
-    def googlePlayServicesVersion = "11.2.0"
+    def androidArchitectureComponentsVersion = "1.0.0-alpha9-1"
+    def androidSupportLibraryVersion = "26.1.0"
+    def googlePlayServicesVersion = "11.4.0"
 
     kapt "android.arch.lifecycle:compiler:$androidArchitectureComponentsVersion"
 
@@ -63,7 +68,3 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
-repositories {
-    mavenCentral()
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-}
