--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,6 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".Application"
@@ -23,7 +21,8 @@
             android:value="@integer/google_play_services_version"/>
 
         <activity
-            android:name=".MainActivity">
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -46,6 +45,12 @@
                     android:scheme="https"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ProfileActivity"
+            android:theme="@style/AppTheme.Profile"/>
+
+        <activity android:name=".SignInActivity"/>
     </application>
 
 </manifest>
