--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,18 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
 
+        <!-- Activities -->
+
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.Main">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
             <intent-filter
                 android:autoVerify="true"
                 android:label="@string/app_name"
@@ -50,7 +54,15 @@
             android:name=".ProfileActivity"
             android:theme="@style/AppTheme.Profile"/>
 
-        <activity android:name=".SignInActivity"/>
+        <activity
+            android:name=".SignInActivity"/>
+
+        <!-- Services -->
+
+        <service
+            android:name=".map.tracking.TrackingService"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
