--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="io.trewartha.positional"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="io.trewartha.positional">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
@@ -55,6 +55,9 @@
 
         <activity
             android:name=".ui.auth.SignInActivity"/>
+
+        <activity
+            android:name=".ui.tracks.TrackEditActivity"/>
 
         <!-- Services -->
 
