--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
-        android:name=".Application"
+        android:name=".Positional"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -57,7 +57,7 @@
             android:name=".ui.auth.SignInActivity"/>
 
         <activity
-            android:name=".ui.tracks.TrackEditActivity"/>
+            android:name=".ui.track.TrackEditActivity"/>
 
         <!-- Services -->
 
