--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="io.trewartha.positional">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".Positional"
@@ -17,7 +16,7 @@
 
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+            android:value="@integer/google_play_services_version" />
 
         <!-- Activities -->
 
@@ -26,44 +25,44 @@
             android:theme="@style/AppTheme.Main">
 
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
             <intent-filter
                 android:autoVerify="true"
                 android:label="@string/app_name"
                 tools:ignore="UnusedAttribute">
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
                     android:host="positional.trewartha.io"
-                    android:scheme="http"/>
+                    android:scheme="http" />
                 <data
                     android:host="positional.trewartha.io"
-                    android:scheme="https"/>
+                    android:scheme="https" />
             </intent-filter>
         </activity>
 
         <activity
             android:name=".ui.profile.ProfileActivity"
-            android:theme="@style/AppTheme.Profile"/>
+            android:theme="@style/AppTheme.Profile" />
+
+        <activity android:name=".ui.auth.SignInActivity" />
 
         <activity
-            android:name=".ui.auth.SignInActivity"/>
-
-        <activity
-            android:name=".ui.track.TrackEditActivity"/>
+            android:name=".ui.track.TrackEditActivity"
+            android:windowSoftInputMode="adjustResize" />
 
         <!-- Services -->
 
         <service
             android:name=".tracks.TrackingService"
-            android:exported="false"/>
+            android:exported="false" />
 
     </application>
 
