--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,9 +54,9 @@
 
         <activity android:name=".ui.auth.SignInActivity" />
 
-        <activity
-            android:name=".ui.track.TrackEditActivity"
-            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".ui.track.TrackEditActivity" />
+
+        <activity android:name=".ui.track.TrackActivity" />
 
         <!-- Services -->
 
