Show the track on a map in the Track Info activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
 
         <activity android:name=".ui.track.TrackEditActivity" />
 
-        <activity android:name=".ui.track.TrackActivity" />
+        <activity android:name=".ui.track.TrackInfoActivity" />
 
         <!-- Services -->
 
