--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3-M2'
+    ext.kotlin_version = '1.3.0'
     repositories {
+        google()
         jcenter()
         mavenCentral()
-        google()
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha10'
+        classpath 'com.android.tools.build:gradle:3.4.0-alpha03'
         classpath 'com.google.firebase:firebase-plugins:1.1.5'
-        classpath 'com.google.gms:google-services:4.0.1'
-        classpath 'io.fabric.tools:gradle:1.25.4'
+        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.26.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -25,8 +24,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven { url "https://maven.google.com" }
     }
 }
 
