--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
     implementation 'androidx.preference:preference:1.1.0-alpha01'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
+    implementation 'com.elyeproj.libraries:loaderviewlibrary:1.5.0'
     implementation 'com.github.Berico-Technologies:Geo-Coordinate-Conversion-Java:360781e'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha01'
