Update some stuff

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Nov 08 17:59:36 MST 2018
+#Tue Dec 04 19:21:52 MST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.0-milestone-1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.0-rc-1-all.zip
