--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+def gitCountMaster = 'git rev-list --count master'.execute().text.trim()
+
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'kotlin-android'
@@ -23,8 +25,9 @@ android {
         applicationId 'io.trewartha.positional'
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 23
-        versionName '2.12.1'
+
+        versionCode gitCountMaster.isEmpty() ? 1337 : Integer.parseInt(gitCountMaster)
+        versionName "2.12.1.$versionCode"
     }
     buildTypes {
         debug {
