--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ repositories {
 ext {
     // Dependency Versions
     lifecycleVersion = '2.1.0-alpha01'
-    navigationVersion = '1.0.0-alpha09'
+    navigationVersion = '1.0.0-alpha11'
 }
 
 dependencies {
@@ -73,8 +73,10 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui-ktx:$navigationVersion"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha03'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
     implementation 'androidx.preference:preference:1.1.0-alpha02'
+    implementation 'ca.rmen:lib-sunrise-sunset:1.1.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
     implementation 'com.elyeproj.libraries:loaderviewlibrary:1.5.0'
     implementation 'com.github.Berico-Technologies:Geo-Coordinate-Conversion-Java:360781e'
