--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,11 @@ android {
             keyAlias keystoreProperties['keyAlias']
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId 'io.trewartha.positional'
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
 
         versionCode gitCountMaster.isEmpty() ? 1337 : Integer.parseInt(gitCountMaster)
         versionName "2.13.0.$versionCode"
@@ -59,35 +59,27 @@ repositories {
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
-ext {
-    // Dependency Versions
-    lifecycleVersion = '2.1.0-alpha01'
-    navigationVersion = '1.0.0-alpha11'
-}
-
 dependencies {
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycleVersion"
-
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "android.arch.navigation:navigation-fragment-ktx:$navigationVersion"
-    implementation "android.arch.navigation:navigation-ui-ktx:$navigationVersion"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha03'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
-    implementation 'androidx.preference:preference:1.1.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-beta02'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-beta02'
+    implementation 'androidx.preference:preference:1.1.0-rc01'
     implementation 'ca.rmen:lib-sunrise-sunset:1.1.1'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.elyeproj.libraries:loaderviewlibrary:1.5.0'
     implementation 'com.github.Berico-Technologies:Geo-Coordinate-Conversion-Java:360781e'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
-    implementation 'com.google.firebase:firebase-core:16.0.6'
-    implementation 'com.google.firebase:firebase-perf:16.2.3'
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha08'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
+    implementation 'com.google.firebase:firebase-perf:18.0.1'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.romandanylyk:pageindicatorview:1.0.1'
-    implementation 'org.jetbrains.anko:anko-commons:0.10.7'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
