--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,24 +62,24 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha01'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-beta02'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha02'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-beta02'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-beta02'
-    implementation 'androidx.preference:preference:1.1.0-rc01'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-beta01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-beta01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-beta01'
+    implementation 'androidx.preference:preference:1.1.0'
     implementation 'ca.rmen:lib-sunrise-sunset:1.1.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-    implementation 'com.elyeproj.libraries:loaderviewlibrary:1.5.0'
+    implementation 'com.elyeproj.libraries:loaderviewlibrary:2.0.0'
     implementation 'com.github.Berico-Technologies:Geo-Coordinate-Conversion-Java:360781e'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha08'
-    implementation 'com.google.firebase:firebase-core:17.0.1'
-    implementation 'com.google.firebase:firebase-perf:18.0.1'
+    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-perf:19.0.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'com.romandanylyk:pageindicatorview:1.0.1'
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
