Improve the Location screen more

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@
 #Wed Apr 28 13:33:58 CDT 2021
 org.gradle.caching=true
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
+org.gradle.unsafe.configuration-cache=true
 android.useAndroidX=true
-android.enableJetifier=true
 kapt.include.compile.classpath=false
