Update Gradle, AGP, and dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,9 @@
 # org.gradle.parallel=true
 #Wed Apr 28 13:33:58 CDT 2021
 org.gradle.caching=true
+org.gradle.java.installations.fromEnv=JAVA_HOME
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
 org.gradle.unsafe.configuration-cache=true
+android.defaults.buildfeatures.buildconfig=true
 android.useAndroidX=true
 kapt.include.compile.classpath=false
