--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
 
     <application
         android:name=".PositionalApplication"
-        android:allowBackup="false"
+        android:dataExtractionRules="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        tools:replace="android:allowBackup">
+        tools:ignore="DataExtractionRules,UnusedAttribute">
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -51,12 +51,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                    android:host="positional.trewartha.io"
-                    android:scheme="http" />
-                <data
-                    android:host="positional.trewartha.io"
-                    android:scheme="https" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data android:host="positional.trewartha.io" />
             </intent-filter>
         </activity>
     </application>
