Update some dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 accompanist = "0.31.5-beta"
 android-desugarJdkLibs = "2.0.3"
-android-gradle = "8.2.0-alpha13"
+android-gradle = "8.2.0-alpha15"
 android-sdk-compile = "34"
 android-sdk-min = "21"
 android-sdk-target = "34"
 androidx-activity = "1.7.2"
 androidx-activity-compose = "1.7.2"
-androidx-compose = "1.5.0-beta03"
+androidx-compose = "1.5.0-rc01"
 androidx-compose-bom = "2023.06.01"
 androidx-compose-compiler = "1.5.0"
-androidx-compose-material3 = "1.2.0-alpha03"
+androidx-compose-material3 = "1.2.0-alpha04"
 androidx-constraint-layout-compose = "1.0.1"
 androidx-core = "1.10.1"
 androidx-data-store = "1.1.0-alpha04"
-androidx-fragment = "1.6.0"
+androidx-fragment = "1.6.1"
 androidx-hilt = "1.0.0"
 androidx-legacySupport-v4 = "1.0.0"
 androidx-lifecycle = "2.6.1"
-androidx-navigation = "2.7.0-beta02"
+androidx-navigation = "2.7.0-rc01"
 androidx-preference = "1.2.0"
-androidx-window = "1.2.0-alpha03"
+androidx-window = "1.2.0-beta01"
 firebase-bom = "31.5.0"
-firebase-crashlytics-gradle = "2.9.7"
+firebase-crashlytics-gradle = "2.9.8"
 firebase-performance-gradle = "1.4.2"
 java = "17"
 javapoet = { strictly = "1.13.0" }
@@ -31,7 +31,7 @@ google-services = "4.3.15"
 hilt = "2.47"
 kotest = "5.6.2"
 kotlin = "1.9.0"
-kotlinx-coroutines = "1.7.2"
+kotlinx-coroutines = "1.7.3"
 kotlinx-datetime = "0.4.0"
 markwon = "4.6.2"
 materialComponents = "1.9.0"
